Update fields as requested
